// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should display the edited value 1`] = `
<div>
  <div
    class="css-b0kbao-propertySection"
  >
    <div
      class="css-1vrv3vk-propertySectionLabel"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Name:
        </h6>
        <div
          class="css-vrp56w-decorators"
        />
      </div>
    </div>
    <div
      class="css-19oeos1-propertySectionWidget"
    >
      <div
        class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
        data-testid="Name:"
        spellcheck="false"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-ve6bqz-style css-953pxc-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
            data-testid="input-Name:"
            id=":r2:"
            name="Name:"
            placeholder="Name:"
            type="text"
            value="Composite Processor"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should display the edited value 2`] = `
<div>
  <div
    class="css-b0kbao-propertySection"
  >
    <div
      class="css-1vrv3vk-propertySectionLabel"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Name:
        </h6>
        <div
          class="css-vrp56w-decorators"
        />
      </div>
    </div>
    <div
      class="css-19oeos1-propertySectionWidget"
    >
      <div
        class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
        data-testid="Name:"
        spellcheck="false"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl css-ve6bqz-style css-953pxc-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
            data-testid="input-Name:"
            id=":r2:"
            name="Name:"
            placeholder="Name:"
            type="text"
            value="Composite Processor"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should display the edited value 3`] = `
<div>
  <div
    class="css-b0kbao-propertySection"
  >
    <div
      class="css-1vrv3vk-propertySectionLabel"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Name:
        </h6>
        <div
          class="css-vrp56w-decorators"
        />
      </div>
    </div>
    <div
      class="css-19oeos1-propertySectionWidget"
    >
      <div
        class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
        data-testid="Name:"
        spellcheck="false"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl css-ve6bqz-style css-953pxc-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
            data-testid="input-Name:"
            id=":r2:"
            name="Name:"
            placeholder="Name:"
            type="text"
            value="Main Composite Processor"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should not trigger completion request if not configured 1`] = `
<body
  style=""
>
  <div>
    <div
      class="css-b0kbao-propertySection"
    >
      <div
        class="css-1vrv3vk-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
          >
            Text:
          </h6>
          <div
            class="css-vrp56w-decorators"
          />
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
          data-testid="Text:"
          spellcheck="false"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-7cz39r-style css-953pxc-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
              data-testid="input-Text:"
              id=":r9:"
              name="Text:"
              placeholder="Text:"
              type="text"
              value="fo"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should not trigger completion request if not configured 2`] = `
<body
  style=""
>
  <div>
    <div
      class="css-b0kbao-propertySection"
    >
      <div
        class="css-1vrv3vk-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
          >
            Text:
          </h6>
          <div
            class="css-vrp56w-decorators"
          />
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
          data-testid="Text:"
          spellcheck="false"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl css-7cz39r-style css-953pxc-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
              data-testid="input-Text:"
              id=":r9:"
              name="Text:"
              placeholder="Text:"
              type="text"
              value="fo"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should not trigger completion request if not configured 3`] = `
<body
  style=""
>
  <div>
    <div
      class="css-b0kbao-propertySection"
    >
      <div
        class="css-1vrv3vk-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
          >
            Text:
          </h6>
          <div
            class="css-vrp56w-decorators"
          />
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
          data-testid="Text:"
          spellcheck="false"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl css-7cz39r-style css-953pxc-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
              data-testid="input-Text:"
              id=":r9:"
              name="Text:"
              placeholder="Text:"
              type="text"
              value="fo"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should render a readOnly textfield 1`] = `
<div>
  <div
    class="css-b0kbao-propertySection"
  >
    <div
      class="css-1vrv3vk-propertySectionLabel"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Name:
        </h6>
        <div
          class="css-vrp56w-decorators"
        />
      </div>
    </div>
    <div
      class="css-19oeos1-propertySectionWidget"
    >
      <div
        class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
        data-testid="Name:"
        spellcheck="false"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl css-ve6bqz-style css-953pxc-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input Mui-disabled css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
            data-testid="input-Name:"
            disabled=""
            id=":r1:"
            name="Name:"
            placeholder="Name:"
            type="text"
            value="Composite Processor"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render a readOnly textfield from widget properties 1`] = `
<div>
  <div
    class="css-b0kbao-propertySection"
  >
    <div
      class="css-1vrv3vk-propertySectionLabel"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Name:
        </h6>
        <div
          class="css-vrp56w-decorators"
        />
      </div>
    </div>
    <div
      class="css-19oeos1-propertySectionWidget"
    >
      <div
        class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
        data-testid="Name:"
        spellcheck="false"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl css-ve6bqz-style css-953pxc-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input Mui-disabled css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
            data-testid="input-Name:"
            disabled=""
            id=":rc:"
            name="Name:"
            placeholder="Name:"
            type="text"
            value="Composite Processor"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the textfield 1`] = `
<div>
  <div
    class="css-b0kbao-propertySection"
  >
    <div
      class="css-1vrv3vk-propertySectionLabel"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Name:
        </h6>
        <div
          class="css-vrp56w-decorators"
        />
      </div>
    </div>
    <div
      class="css-19oeos1-propertySectionWidget"
    >
      <div
        class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
        data-testid="Name:"
        spellcheck="false"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-ve6bqz-style css-953pxc-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
            data-testid="input-Name:"
            id=":r0:"
            name="Name:"
            placeholder="Name:"
            type="text"
            value="Composite Processor"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the textfield with empty style 1`] = `
<body>
  <div>
    <div
      class="css-b0kbao-propertySection"
    >
      <div
        class="css-1vrv3vk-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
          >
            Name:
          </h6>
          <div
            class="css-vrp56w-decorators"
          />
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
          data-testid="Name:"
          spellcheck="false"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-ve6bqz-style css-953pxc-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
              data-testid="input-Name:"
              id=":r5:"
              name="Name:"
              placeholder="Name:"
              type="text"
              value="Composite Processor"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should render the textfield with help hint 1`] = `
<div>
  <div
    class="css-b0kbao-propertySection"
  >
    <div
      class="css-1vrv3vk-propertySectionLabel"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Name:
        </h6>
        <div
          class="css-vrp56w-decorators"
        >
          <svg
            aria-hidden="true"
            aria-label=""
            class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-kw0y8f-MuiSvgIcon-root"
            data-mui-internal-clone-element="true"
            data-testid="HelpOutlineOutlinedIcon"
            focusable="false"
            style="margin-left: 8px; font-size: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="css-19oeos1-propertySectionWidget"
    >
      <div
        class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
        data-testid="Name:"
        spellcheck="false"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-ve6bqz-style css-953pxc-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
            data-testid="input-Name:"
            id=":rb:"
            name="Name:"
            placeholder="Name:"
            type="text"
            value="Composite Processor"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the textfield with style 1`] = `
<body>
  <div>
    <div
      class="css-b0kbao-propertySection"
    >
      <div
        class="css-1vrv3vk-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
          >
            Name:
          </h6>
          <div
            class="css-vrp56w-decorators"
          />
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
          data-testid="Name:"
          spellcheck="false"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-ijey5v-style css-953pxc-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
              data-testid="input-Name:"
              id=":r4:"
              name="Name:"
              placeholder="Name:"
              type="text"
              value="Composite Processor"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should render the textfield without style 1`] = `
<body>
  <div>
    <div
      class="css-b0kbao-propertySection"
    >
      <div
        class="css-1vrv3vk-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
          >
            Name:
          </h6>
          <div
            class="css-vrp56w-decorators"
          />
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
          data-testid="Name:"
          spellcheck="false"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-ve6bqz-style css-953pxc-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
              data-testid="input-Name:"
              id=":r3:"
              name="Name:"
              placeholder="Name:"
              type="text"
              value="Composite Processor"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should support completion if configured 1`] = `
<body>
  <div>
    <div
      class="css-b0kbao-propertySection"
    >
      <div
        class="css-1vrv3vk-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
          >
            Text:
          </h6>
          <div
            class="css-vrp56w-decorators"
          />
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
          data-testid="Text:"
          spellcheck="false"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-7cz39r-style css-953pxc-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
              data-testid="input-Text:"
              id=":r6:"
              name="Text:"
              placeholder="Text:"
              type="text"
              value="fo"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should support completion if configured 2`] = `
<body>
  <div>
    <div
      class="css-b0kbao-propertySection"
    >
      <div
        class="css-1vrv3vk-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
          >
            Text:
          </h6>
          <div
            class="css-vrp56w-decorators"
          />
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
          data-testid="Text:"
          spellcheck="false"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl css-7cz39r-style css-953pxc-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
              data-testid="input-Text:"
              id=":r6:"
              name="Text:"
              placeholder="Text:"
              type="text"
              value="fo"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should support completion if configured 3`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="css-b0kbao-propertySection"
    >
      <div
        class="css-1vrv3vk-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
          >
            Text:
          </h6>
          <div
            class="css-vrp56w-decorators"
          />
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xhyru6-textfield css-1z10yd4-MuiFormControl-root-MuiTextField-root"
          data-testid="Text:"
          spellcheck="false"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-7cz39r-style css-953pxc-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-3klcbk-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
              data-testid="input-Text:"
              id=":r6:"
              name="Text:"
              placeholder="Text:"
              type="text"
              value="fo"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPopover-root MuiModal-root css-1i0e6f3-MuiModal-root-MuiPopover-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiBackdrop-invisible MuiModal-backdrop css-g3hgs1-MuiBackdrop-root-MuiModal-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiPopover-paper css-3bmhjh-MuiPaper-root-MuiPopover-paper"
      style="opacity: 1; transform: scale(1, 1); transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 16px; left: 16px; transform-origin: -16px -16px;"
      tabindex="-1"
    >
      <ul
        class="MuiList-root MuiList-padding css-h4y409-MuiList-root"
        data-testid="completion-proposals"
        id="completion-proposals"
        role="menu"
        tabindex="-1"
      >
        <li
          aria-label="Choice 1"
          class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters css-kk1bwy-MuiButtonBase-root-MuiMenuItem-root"
          data-mui-internal-clone-element="true"
          data-testid="proposal-foo-1"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="MuiListItemText-root css-tlelie-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-10hburv-MuiTypography-root"
            >
              foo
            </span>
          </div>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </li>
        <li
          aria-label="Choice 2"
          class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters css-kk1bwy-MuiButtonBase-root-MuiMenuItem-root"
          data-mui-internal-clone-element="true"
          data-testid="proposal-fooBar-2"
          role="menuitem"
          tabindex="-1"
        >
          <div
            class="MuiListItemText-root css-tlelie-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-10hburv-MuiTypography-root"
            >
              fooBar
            </span>
          </div>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </li>
      </ul>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
